--- a/src/main/resources/templates/indexArticles.html
+++ b/src/main/resources/templates/indexArticles.html
@@ -11,10 +11,12 @@
         <tr>
             <th>ID</th>
             <th>ARTICLE</th>
+            <th>WC</th>
         </tr>
         <tr th:each ="article : ${articles}">
             <td> <a th:text="${article.id}" th:href="@{'/article/' + ${article.id}}"></a> </td>
             <td> <a th:text="${article.name}" th:href="@{${article.name}}"></a> </td>
+            <td th:text="${article.wc}" > </td>
         </tr>
     </table>
 </div>
