viewers almost ready controllers done

--- a/src/main/resources/templates/indexArticles.html
+++ b/src/main/resources/templates/indexArticles.html
@@ -6,7 +6,15 @@
     <title>Russian Articles</title>
 </head>
 <body>
-<div>
+
+<h3>
+    <a href="http://localhost:8080"> home </a>
+    <a href="http://localhost:8080/avtor"> avtor </a>
+    <a href="http://localhost:8080/poems"> poems </a>
+    <a href="http://localhost:8080/today"> today </a>
+    <a href="http://localhost:8080/articles/"> articles </a>
+</h3>
+
     <table border="0">
         <tr>
             <th>ID</th>
@@ -23,7 +31,6 @@
             <td th:text="${article.title}" > </td>
         </tr>
     </table>
-</div>
 
 </body>
 </html>
