--- a/src/main/resources/templates/avtors.html
+++ b/src/main/resources/templates/avtors.html
@@ -1,21 +1,19 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Russian Article</title>
+    <title>MAIN PAGE</title>
 </head>
 <body>
-
-<h3>
+    <h3>
     <a href="http://localhost:8080"> home </a>
     <a href="http://localhost:8080/avtor"> avtor </a>
     <a href="http://localhost:8080/poems"> poems </a>
     <a href="http://localhost:8080/today"> today </a>
     <a href="http://localhost:8080/articles/"> articles </a>
-</h3>
-
-<p th:text="${article}" > </p>
+    </h3>
+    <div th:each ="item : ${list}">
+        <a th:text="${item.substring(59)}" th:href="@{${item}}"></a>
+    </div>
 </body>
-<a href="/articles/"> back </a>
 </html>
