--- a/src/main/resources/templates/indexArticles.html
+++ b/src/main/resources/templates/indexArticles.html
@@ -1,36 +1,34 @@
 
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Russian Articles</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Russian Articles</title>
+    </head>
+    <body>
 
-<h3>
-    <a href="http://localhost:8080"> home </a>
-    <a href="http://localhost:8080/avtor"> avtor </a>
-    <a href="http://localhost:8080/poems"> poems </a>
-    <a href="http://localhost:8080/today"> today </a>
-    <a href="http://localhost:8080/articles/"> articles </a>
-</h3>
+        <div th:replace="header::header"></div>
 
-    <table border="0">
-        <tr>
-            <th>ID</th>
-            <th>ARTICLE</th>
-            <th>WC</th>
-            <th>Author</th>
-            <th>Title</th>
-        </tr>
-        <tr th:each ="article : ${articles}">
-            <td> <a th:text="${article.id}" th:href="@{'/article/' + ${article.id}}"></a> </td>
-            <td> <a th:text="${article.name.substring(20)}" th:href="@{${article.name}}"></a> </td>
-            <td th:text="${article.wc}" > </td>
-            <td th:text="${article.author.realname}" > </td>
-            <td th:text="${article.title}" > </td>
-        </tr>
-    </table>
+        <div>
+            <table border="0">
+                <tr>
+                    <th>ID</th>
+                    <th>ARTICLE</th>
+                    <th>WC</th>
+                    <th>Author</th>
+                    <th>Title</th>
+                </tr>
+                <tr th:each ="article : ${articles}">
+                    <td> <a th:text="${article.id}" th:href="@{'/article/' + ${article.id}}"></a> </td>
+                    <td> <a th:text="${article.name.substring(20)}" th:href="@{${article.name}}"></a> </td>
+                    <td th:text="${article.wc}" > </td>
+                    <td th:text="${article.author.realname}" > </td>
+                    <td th:text="${article.title}" > </td>
+                </tr>
+            </table>
+        </div>
 
-</body>
+        <div th:replace="fragments/footer :: footer">&copy; 2016 The Static Templates</div>
+
+    </body>
 </html>
