--- a/src/main/resources/templates/indexWordBook.html
+++ b/src/main/resources/templates/indexWordBook.html
@@ -5,6 +5,7 @@
     <title>Russian Word Book</title>
 </head>
 <body>
+<div th:include="header::header"> HEADER </div>
 <div>
     <table border="0">
         <tr>
@@ -17,6 +18,7 @@
         </tr>
     </table>
 </div>
+<div th:replace="footer::footer"> FOOTER </div>
 
 </body>
 </html>
