--- a/src/main/resources/templates/mainIndex.html
+++ b/src/main/resources/templates/mainIndex.html
@@ -1,22 +1,22 @@
 
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <title>MAIN PAGE</title>
-    </head>
-    <body>
-        <div th:include="header::header"> header </div>
-        <div>
-            <table border="0">
-                <tr>
-                    <th>ARTICLE</th>
-                </tr>
-                <tr th:each ="item : ${list}">
-                    <td> <a th:text="${item.substring(86)}" th:href="@{${item}}"></a> </td>
-                </tr>
-            </table>
-        </div>
-        <div th:replace="footer::footer">&copy; 2016 The Static Templates</div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>MAIN PAGE</title>
+</head>
+<body>
+<div th:include="header::header"> HEADER </div>
+<div>
+    <table border="0">
+        <tr>
+            <th>ARTICLE</th>
+        </tr>
+        <tr th:each ="item : ${list}">
+            <td> <a th:text="${item.substring(86)}" th:href="@{${item}}"></a> </td>
+        </tr>
+    </table>
+</div>
+<div th:replace="footer::footer"> FOOTER </div>
+</body>
 </html>
