--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>FOOTER</title>
+    <title>HEADER</title>
 </head>
 <body>
 <div th:fragment="header">
@@ -12,6 +12,8 @@
         <a href="http://localhost:8080/poems"> poems </a>
         <a href="http://localhost:8080/today"> today </a>
         <a href="http://localhost:8080/articles/"> articles </a>
+        <a href="http://localhost:8080/authors/"> authors </a>
+        <a href="http://localhost:8080/wordbook/"> wordbook </a>
     </h3>
 </div>
 </body>
