--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
-        <title>Russian Article</title>
+        <title>Russian Articles</title>
     </head>
     <body>
 
