--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -12,6 +12,8 @@
         <a href="http://localhost:8080/poems"> poems </a>
         <a href="http://localhost:8080/today"> today </a>
         <a href="http://localhost:8080/articles/"> articles </a>
+        <a href="http://localhost:8080/authors/"> authors </a>
+        <a href="http://localhost:8080/wordbook/"> wordbook </a>
     </h3>
 </div>
 </body>
