--- a/src/main/resources/templates/indexWordBook.html
+++ b/src/main/resources/templates/indexWordBook.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Russian Word Book</title>
+    <title>Word Book</title>
 </head>
 <body>
 <div th:include="header::header"> HEADER </div>
