--- a/src/main/resources/templates/todayIndex.html
+++ b/src/main/resources/templates/todayIndex.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>MAIN PAGE</title>
+    <title>TODAY</title>
 </head>
 <body>
 <div th:include="header::header"> HEADER </div>
