--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -18,9 +18,10 @@
         <th>RealName</th>
     </tr>
     <tr th:each ="author : ${authors}">
-        <td> <a th:text="${author.id}" th:href="@{'/article/' + ${author.id}}"></a> </td>
+        <td> <a th:text="${author.id}" th:href="@{'/authors/' + ${author.id}}"></a> </td>
         <td> <a th:text="${author.name.substring(26)}" th:href="@{${author.name}}"></a> </td>
         <td th:text="${author.realname}" > </td>
+        <td th:text="${#lists.size(author.articles)}" > </td>
     </tr>
 </table>
 
