--- a/src/main/resources/templates/poems.html
+++ b/src/main/resources/templates/poems.html
@@ -7,10 +7,14 @@
 </head>
 <body>
 <div th:include="header::header"> HEADER </div>
-<span th:each ="item : ${list}">
+
+    <a href="/today/"> back </a>
+    <span th:each ="item : ${list}">
         <!--<a th:text="${item}" th:href="@{${item}}"></a>-->
         <a th:text="${item.substring(31)}" th:href="@{${item}}"></a>
     </span>
+    <a href="/today/"> back </a>
+
 <div th:replace="footer::footer"> FOOTER </div>
 </body>
 </html>
