--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -10,7 +10,9 @@
     <div th:include="header::header"> HEADER </div>
 
     <p th:text="${article}" > </p>
-    <a href="/articles/"> back </a>
+
+    <a href="/authors/"> back to authors </a>
+    <a href="/articles/"> back to articles </a>
 
     <div th:replace="footer::footer"> FOOTER </div>
 
