added view articles by autors

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -11,8 +11,8 @@
 
     <p th:text="${article}" > </p>
 
-    <a href="/authors/"> back to authors </a>
-    <a href="/articles/"> back to articles </a>
+    <!--<a href="/authors/"> back to authors </a>-->
+    <!--<a href="/articles/"> back to articles </a>-->
 
     <div th:replace="footer::footer"> FOOTER </div>
 
