--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -22,7 +22,7 @@
     </tr>
 </table>
 
-<a href="/authors/"> back </a>
+<!--<a href="/authors/"> back </a>-->
 
 <div th:replace="footer::footer"> FOOTER </div>
 
