--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -13,9 +13,10 @@
 
 <table border="0">
     <tr>
-        <th>ID</th>
-        <th>Author</th>
-        <th>RealName</th>
+        <th><a href="./">ID</a></th>
+        <th><a href="./name">Author</a></th>
+        <th><a href="./realname">RealName</a></th>
+        <th><a href="./count">Count</a></th>
     </tr>
     <tr th:each ="author : ${authors}">
         <td> <a th:text="${author.id}" th:href="@{'/authors/' + ${author.id}}"></a> </td>
@@ -25,7 +26,7 @@
     </tr>
 </table>
 
-<a href="/authors/"> back </a>
+<!--<a href="/authors/"> back </a>-->
 <div th:replace="footer::footer"> FOOTER </div>
 
 </body>
