--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -7,6 +7,7 @@
 <body>
 <div th:fragment="footer">
     <h3>
+        <a href="#" onclick="history.back(-2);"> back </a>
         <a href="http://localhost:8080"> home </a>
         <a href="http://localhost:8080/avtor"> avtor </a>
         <a href="http://localhost:8080/poems"> poems </a>
