--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,6 +7,8 @@
 <body>
 <div th:fragment="header">
     <h3>
+        <a href="#" onclick="history.back(-2);"> back </a>
+
         <a href="http://localhost:8080"> home </a>
 
         <a href="http://localhost:8080/today"> today </a>
