recursive full site scan for poemlinks poor

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -22,6 +22,9 @@
         <a href="http://localhost:8080/authors/"> authors </a>
 
         <a href="http://localhost:8080/wordbook/"> wordbook </a>
+
+        <a href="http://localhost:8080/links/1"> wordbook </a>
+
     </h3>
 </div>
 </body>
