--- a/src/main/resources/templates/avtors.html
+++ b/src/main/resources/templates/avtors.html
@@ -7,7 +7,8 @@
 <body>
 <div th:include="header::header"> HEADER </div>
 <div th:each ="item : ${list}">
-    <a th:text="${item.substring(59)}" th:href="@{${item}}"></a>
+    <!--<a th:text="${item.substring(59)}" th:href="@{${item}}"></a>-->
+    <a th:text="${item}" th:href="@{${item}}"></a>
 </div>
 <div th:replace="footer::footer"> FOOTER </div>
 </body>
