avtors and selected are make easy links

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -23,7 +23,7 @@
 
         <a href="http://localhost:8080/wordbook/"> wordbook </a>
 
-        <a href="http://localhost:8080/links/1"> wordbook </a>
+        <a href="http://localhost:8080/links/1"> links </a>
 
     </h3>
 </div>
