--- a/src/main/resources/templates/indexArticles.html
+++ b/src/main/resources/templates/indexArticles.html
@@ -14,16 +14,16 @@
         <tr>
             <th><a href="./">ID</a></th>
             <th><a href="./name">ARTICLE</a></th>
-            <th><a href="./wc">WC</a></th>
             <th><a href="./author">Author</a></th>
             <th><a href="./title">Title</a></th>
+            <th><a href="./wc">WC</a></th>
         </tr>
         <tr th:each ="article : ${articles}">
-            <td> <a th:text="${article.id}" th:href="@{'/article/' + ${article.id}}"></a> </td>
+            <td> <a th:text="${article.id}" th:href="@{'/article/' + ${article.id}}"/> </td>
             <td> <a th:text="${article.name.substring(20)}" th:href="@{${article.name}}"></a> </td>
+            <td> <a th:text="${article.author.realname}"  th:href="@{${article.author.name}}"/> </td>
+            <td> <a th:text="${article.title}" th:href="@{'/article/' + ${article.id}}"/> </td>
             <td th:text="${article.wc}" > </td>
-            <td th:text="${article.author.realname}" > </td>
-            <td th:text="${article.title}" > </td>
         </tr>
     </table>
 </div>
