wordbook sorting different methods

--- a/src/main/resources/templates/WordBook.html
+++ b/src/main/resources/templates/WordBook.html
@@ -12,8 +12,9 @@
 <div>
     <a th:each ="word : ${wordbook}">
         <!--<i th:text="${word.getRevWord()}"/>-->
-        <a th:text="${word.word}" th:href="@{'http://localhost:8080/wordbook/word/'+${word.id}}">
-        <i th:text="${word.id}"/></a>
+        <a th:text="${word.word}" th:href="@{'http://localhost:8080/wordbook/word/'+${word.id}}"/>
+        <!--<i th:text="${word.getLetters(true)}"/>-->
+        <!--<i th:text="${word.getWord(true)}"/>-->
         <!--&nbsp-->
     </a>
 </div>
