--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -14,18 +14,19 @@
 <table border="0">
     <tr>
         <th><a href="/authors/order/id">ID</a></th>
-        <th><a href="/authors/order/realname">RealName</a></th>
         <th><a href="/authors/order/name">Author</a></th>
+        <th><a href="/authors/order/realname">RealName</a></th>
         <th><a href="/authors/order/count">Count</a></th>
     </tr>
     <tr th:each ="author : ${authors}">
         <td> <a th:text="${author.id}" th:href="@{'/authors/' + ${author.id}}"></a> </td>
-        <td> <a th:text="${author.realname}" th:href="@{${author.name}}"/> </td>
         <td> <a th:text="${author.name.substring(26)}" th:href="@{${author.name}}"></a> </td>
+        <td> <a th:text="${author.realname}" th:href="@{'/authors/' + ${author.id}}"/> </td>
         <td> <a th:text="${#lists.size(author.articles)}" th:href="@{'/authors/' + ${author.id}}"/> </td>
+        <td/>
         <td> <a th:text=" delete " th:href="@{'/authors/delete/' + ${author.id}}"/> </td>
-        <td> <a th:text=" poems " th:href="@{'http://localhost:8080/poems?url='+${author.name}}"></a> </td>
-        <td> <a th:text=" avtor " th:href="@{'http://localhost:8080/avtor?url='+${author.name}}"></a> </td>
+        <td> <a th:text=" poems " th:href="@{'/poems?url='+${author.name}}"></a> </td>
+        <td> <a th:text=" avtor " th:href="@{'/avtor?url='+${author.name}}"></a> </td>
     </tr>
 </table>
 
