--- a/src/main/resources/templates/indexArticles.html
+++ b/src/main/resources/templates/indexArticles.html
@@ -15,6 +15,7 @@
             <th><a href="/articles/order/id">ID</a></th>
             <th><a href="/articles/order/name">ARTICLE</a></th>
             <th><a href="/articles/order/author">Author</a></th>
+            <!--<th><a href="/articles/order/author">Author</a></th>-->
             <th><a href="/articles/order/title">Title</a></th>
             <th><a href="/articles/order/wc">WC</a></th>
         </tr>
@@ -22,6 +23,7 @@
             <td> <a th:text="${article.id}" th:href="@{'/article/' + ${article.id}}"/> </td>
             <td> <a th:text="${article.name.substring(20)}" th:href="@{${article.name}}"></a> </td>
             <td> <a th:text="${article.author.realname}"  th:href="@{${article.author.name}}"/> </td>
+            <!--<td> <a th:text="${article.author.realname}"  th:href="@{'/authors/'+${article.author.id}}"/> </td>-->
             <td> <a th:text="${article.title}" th:href="@{'/article/' + ${article.id}}"/> </td>
             <td th:text="${article.wc}" > </td>
             <td> <a th:text="delete" th:href="@{'/article/delete/' + ${article.id}}"/> </td>
