--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -3,27 +3,31 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
-        <title>Russian Articles</title>
+        <title th:text="${title}">Article</title>
     </head>
     <body>
+
+    <h3 th:text="${author}">Author</h3>
+    <h2 th:text="${title}">Title</h2>
 
     <div th:include="header::header"> HEADER </div>
 
     <!--<p th:text="${article}" />-->
 
-    <div>
-        <a th:each="word : ${article}">
+    <div th:with="size=0">
+        <a th:each="word : ${article}" th:with="size=${size}+${word.word.size}">
             <!--<i th:text="${word.getRevWord()}"/>-->
+
+            <!--<a th:text="${size}"/>-->
+
+            <sup th:text="${size}"/>
 
             <a th:if="${word.clause}">
                 <b th:text="${word.word.word}"/>
-                <sub th:text="${word.word.size}"/>
-                <b th:summary="${word.word.size}"/>
                 <br/>
             </a>
             <a th:unless="${word.clause}">
                 <a th:text="${word.word.word}"/>
-                <sub th:text="${word.word.size}"/>
             </a>
 
             <!--<a th:text="${word.word.word}" th:href="@{'http://localhost:8080/wordbook/word/'+${word.word.id}}"/>-->
@@ -34,6 +38,7 @@
         </a>
     </div>
 
+    <a th:text="delete" th:href="@{'/article/delete/' + ${id}}"/>
 
     <!--<a href="/authors/"> back to authors </a>-->
     <!--<a href="/articles/"> back to articles </a>-->
