paging word split -ending

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -23,7 +23,9 @@
 
         <a href="http://localhost:8080/wordbook/"> wordbook </a>
 
-        <a href="http://localhost:8080/links/1"> links </a>
+        <a href="http://localhost:8080/links/1"> links1 </a>
+        <a href="http://localhost:8080/links/2"> links2 </a>
+        <a href="http://localhost:8080/links/3"> links3 </a>
 
     </h3>
 </div>
