--- a/src/main/resources/templates/WordBook.html
+++ b/src/main/resources/templates/WordBook.html
@@ -13,7 +13,11 @@
     <a th:each ="word : ${wordbook}">
         <!--<i th:text="${word.getRevWord()}"/>-->
         <!--<a th:text="${word.word.word}" th:href="@{'http://localhost:8080/wordbook/word/'+${word.id}}"/>-->
-        <a th:text="${word.word}" th:href="@{'http://localhost:8080/wordbook/word/'+${word.id}}"/>
+        <!--<a th:text="${word.word}" th:href="@{'http://localhost:8080/wordbook/word/'+${word.id}}"/>-->
+        <i th:text="${#strings.replace(word.word,word.getEnd(),'('+word.getEnd()+')')}" />
+           <!--th:href="@{'http://localhost:8080/wordbook/word/'+${word.id}}"/>-->
+        <!--<b th:text="${word.getEnd()}"/>-->
+        <!--</a>-->
         <!--<i th:text="${word.getLetters(true)}"/>-->
         <!--<i th:text="${word.getWord(true)}"/>-->
         <!--&nbsp-->
