adding new words from poems by whole blocks

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -14,7 +14,7 @@
         <a href="http://localhost:8080/today"> today </a>
         <a href="http://localhost:8080/articles/"> articles </a>
         <a href="http://localhost:8080/authors/"> authors </a>
-        <a href="http://localhost:8080/wordbook/"> wordbook </a>
+        <a href="http://localhost:8080/wordbook/page?page=1"> wordbook </a>
     </h3>
 </div>
 </body>
