--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -21,7 +21,7 @@
 
         <a href="http://localhost:8080/authors/"> authors </a>
 
-        <a href="http://localhost:8080/wordbook/"> wordbook </a>
+        <a href="http://localhost:8080/wordbook/page?page=1"> wordbook </a>
 
         <a href="http://localhost:8080/links/1"> links1 </a>
         <a href="http://localhost:8080/links/2"> links2 </a>
