wordbook: sorting. Map ordered by size by lambda function.

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -22,6 +22,7 @@
         <a href="http://localhost:8080/authors/"> authors </a>
 
         <a href="http://localhost:8080/wordbook/page?page=1"> wordbook </a>
+        <a href="http://localhost:8080/wordbook/ends"> ends </a>
 
         <a href="http://localhost:8080/links/1"> links1 </a>
         <a href="http://localhost:8080/links/2"> links2 </a>
