paging and sorting wordbook

--- a/src/main/resources/templates/WordBook.html
+++ b/src/main/resources/templates/WordBook.html
@@ -10,16 +10,16 @@
 
 <div th:include="header::header"> HEADER </div>
 
-<a href="http://localhost:8080/wordbook/page?page=0"> wordbook </a>
-<a href="http://localhost:8080/wordbook/page?page=1"> wordbook </a>
-<a href="http://localhost:8080/wordbook/page?page=2"> wordbook </a>
-<a href="http://localhost:8080/wordbook/page?page=3"> wordbook </a>
-<a href="http://localhost:8080/wordbook/page?page=4"> wordbook </a>
-<a href="http://localhost:8080/wordbook/page?page=5"> wordbook </a>
-<a href="http://localhost:8080/wordbook/page?page=6"> wordbook </a>
-<a href="http://localhost:8080/wordbook/page?page=7"> wordbook </a>
-<a href="http://localhost:8080/wordbook/page?page=8"> wordbook </a>
-<a href="http://localhost:8080/wordbook/page?page=9"> wordbook </a>
+<a href="http://localhost:8080/wordbook/page?page=0"> 0 </a>
+<a href="http://localhost:8080/wordbook/page?page=1"> 1 </a>
+<a href="http://localhost:8080/wordbook/page?page=2"> 2 </a>
+<a href="http://localhost:8080/wordbook/page?page=3"> 3 </a>
+<a href="http://localhost:8080/wordbook/page?page=4"> 4 </a>
+<a href="http://localhost:8080/wordbook/page?page=5"> 5 </a>
+<a href="http://localhost:8080/wordbook/page?page=6"> 6 </a>
+<a href="http://localhost:8080/wordbook/page?page=7"> 7 </a>
+<a href="http://localhost:8080/wordbook/page?page=8"> 8 </a>
+<a href="http://localhost:8080/wordbook/page?page=9"> 9 </a>
 
 <div>
     <a th:each ="word : ${wordbook}">
