--- a/src/main/resources/templates/WordBook.html
+++ b/src/main/resources/templates/WordBook.html
@@ -10,16 +10,25 @@
 
 <div th:include="header::header"> HEADER </div>
 
-<a href="http://localhost:8080/wordbook/page?page=0"> 0 </a>
-<a href="http://localhost:8080/wordbook/page?page=1"> 1 </a>
-<a href="http://localhost:8080/wordbook/page?page=2"> 2 </a>
-<a href="http://localhost:8080/wordbook/page?page=3"> 3 </a>
-<a href="http://localhost:8080/wordbook/page?page=4"> 4 </a>
-<a href="http://localhost:8080/wordbook/page?page=5"> 5 </a>
-<a href="http://localhost:8080/wordbook/page?page=6"> 6 </a>
-<a href="http://localhost:8080/wordbook/page?page=7"> 7 </a>
-<a href="http://localhost:8080/wordbook/page?page=8"> 8 </a>
-<a href="http://localhost:8080/wordbook/page?page=9"> 9 </a>
+<!--<a href="http://localhost:8080/wordbook/page?page=0"> 0 </a>-->
+<!--<a href="http://localhost:8080/wordbook/page?page=1"> 1 </a>-->
+<!--<a href="http://localhost:8080/wordbook/page?page=2"> 2 </a>-->
+<!--<a href="http://localhost:8080/wordbook/page?page=3"> 3 </a>-->
+<!--<a href="http://localhost:8080/wordbook/page?page=4"> 4 </a>-->
+<!--<a href="http://localhost:8080/wordbook/page?page=5"> 5 </a>-->
+<!--<a href="http://localhost:8080/wordbook/page?page=6"> 6 </a>-->
+<!--<a href="http://localhost:8080/wordbook/page?page=7"> 7 </a>-->
+<!--<a href="http://localhost:8080/wordbook/page?page=8"> 8 </a>-->
+
+    <a th:each ="page : ${pages}">
+        <a th:text="${page}" th:href="@{'http://localhost:8080/wordbook/page?page='+${page}}">
+            page
+        </a>
+    </a>
+
+<div>
+
+</div>
 
 <div>
     <a th:each ="word : ${wordbook}">
@@ -35,6 +44,7 @@
         <!--&nbsp-->
     </a>
 </div>
+
 <div th:replace="footer::footer"> FOOTER </div>
 
 </body>
