--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -17,15 +17,17 @@
     <div th:include="header::header"> HEADER </div>
 
     <!--<p th:text="${article}" />-->
+
     <a th:text="delete" th:href="@{'/article/delete/' + ${id}}"/>
 
     <div th:with="size=0">
-        <a th:each="word : ${article}" th:with="size=${size}+${word.word.size}">
+
+        <a th:each="word : ${article}">
             <!--<i th:text="${word.getRevWord()}"/>-->
 
             <!--<a th:text="${size}"/>-->
 
-            <sup th:text="${size}"/>
+            <sup th:with="size=${size+1}" th:text="${word.word.size}"/>
 
             <a th:if="${word.clause}">
                 <b th:text="${word.word.word}"/>
@@ -41,6 +43,7 @@
             <!--<i th:text="${word.getWord(true)}"/>-->
             <!--&nbsp-->
         </a>
+
     </div>
 
     <a th:text="delete" th:href="@{'/article/delete/' + ${id}}"/>
