table of clauses and parts length

--- a/src/main/resources/templates/indexArticles.html
+++ b/src/main/resources/templates/indexArticles.html
@@ -26,7 +26,8 @@
             <td> <a th:text="${article.author.id}"  th:href="@{'/authors/' + ${article.author.id}}"/> </td>
             <td> <a th:text="${article.author.realname}"  th:href="@{${article.author.name}}"/> </td>
             <!--<td> <a th:text="${article.author.realname}"  th:href="@{'/authors/'+${article.author.id}}"/> </td>-->
-            <td> <a th:text="${article.title}" th:href="@{'/article/' + ${article.id}}"/> </td>
+            <!--<td> <a th:text="${article.title}" th:href="@{'/article/' + ${article.id}}"/> </td>-->
+            <td> <a th:text="${article.title}" th:href="@{'/article/table/' + ${article.id}}"/> </td>
             <td th:text="${article.wc}" > </td>
             <td> <a th:text="delete" th:href="@{'/article/delete/' + ${article.id}}"/> </td>
         </tr>
