--- a/src/main/resources/templates/articleTable.html
+++ b/src/main/resources/templates/articleTable.html
@@ -6,8 +6,8 @@
     <body>
         <div th:with="size=0">
             <a th:each="clause : ${table}">
-                <i th:text="${clause.clause}"/>
-                <i th:text="${clause.parts}"/>
+                <a th:text="${clause.parts}"/>
+                <a th:text="${clause.clause}"/>
                 <br/>
             </a>
         </div>
