clauses and articles together

--- a/src/main/resources/templates/articleTable.html
+++ b/src/main/resources/templates/articleTable.html
@@ -19,7 +19,7 @@
 
         <table th:with="size=0">
             <tr th:each="clause : ${table}">
-                <td th:text="${clause.position}"/>
+                <td th:text="${clause.number}"/>
                 <td/>
                 <td th:text="${clause.clause}"/>
                 <td/>
