clauses and articles together and checking for empty clauses

--- a/src/main/resources/templates/articleTable.html
+++ b/src/main/resources/templates/articleTable.html
@@ -24,6 +24,13 @@
                 <td th:text="${clause.clause}"/>
                 <td/>
                 <td th:text="${clause.parts}"/>
+                <td/>
+                <!--<td th:text="${clause.text}"/>-->
+                <td>
+                    <a th:each="word : ${clause.text}">
+                        <a th:text="${word.word.word}"/>
+                    </a>
+                </td>
             </tr>
         </table>
 
