added sorting by clauses count chance output Table Of Clauses in Arcticle

--- a/src/main/resources/templates/indexArticles.html
+++ b/src/main/resources/templates/indexArticles.html
@@ -18,7 +18,7 @@
             <th><a href="/articles/order/author">Author</a></th>
             <!--<th><a href="/articles/order/author">Author</a></th>-->
             <th><a href="/articles/order/title">Title</a></th>
-            <th><a href="/articles/order/wc">CC</a></th>
+            <th><a href="/articles/order/cc">CC</a></th>
             <th><a href="/articles/order/wc">WC</a></th>
         </tr>
         <tr th:each ="article : ${articles}">
