--- a/src/main/resources/templates/articleTable.html
+++ b/src/main/resources/templates/articleTable.html
@@ -19,20 +19,29 @@
 
         <table th:with="size=0">
             <tr th:each="clause : ${table}">
-                <td th:text="${clause.number}"/>
-                <td/>
                 <td th:text="${clause.clause}"/>
                 <td/>
-                <td th:text="${clause.parts}"/>
+                <td th:text="${clause.number}"/>
                 <td/>
                 <!--<td th:text="${clause.text}"/>-->
                 <td>
                     <a th:each="word : ${clause.text}">
-                        <a th:text="${word.word.word}"/>
+                        <!--<a th:text="${word.word.word}"/>-->
+                        <a th:if="${word.lineBreak}">
+                            <b th:text="${word.word.word}"/>
+                            <br/>
+                        </a>
+                        <a th:unless="${word.lineBreak}">
+                            <a th:text="${word.word.word}"/>
+                        </a>
                     </a>
                 </td>
+                <td/>
+                <td th:text="${clause.parts}"/>
             </tr>
         </table>
+
+        <a th:text="delete" th:href="@{'/article/delete/' + ${id}}"/>
 
         <div th:replace="footer::footer"> FOOTER </div>
 
