clauses unsorted pageable output

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -21,6 +21,8 @@
 
         <a href="http://localhost:8080/authors/"> authors </a>
 
+        <a href="http://localhost:8080/clause/page?page=0"> clauses </a>
+
         <a href="http://localhost:8080/wordbook/page?page=0"> wordbook </a>
         <a href="http://localhost:8080/wordbook/ends"> ends </a>
 
